wip: new config

--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <p data-test-2="testing!!" data-test="lol" data-test-3="rofl">
-    <span>test</span>
+    <div>test</div>
   </p>
 </body>
 </html>
